# python-refactor-mcp

./: .gitignore  .pre-commit-config.yaml  .structurelint.yml  CHANGELOG.md  CI_CD_SETUP.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  LICENSE  PHASE_2_COMPLETION.md  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  SESSION_SUMMARY.md  TEST_COVERAGE.md  claude_desktop_config.example.json  pyproject.toml  repomix.config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  repomix.yml  structurelint.yml  test-and-log.yml
scripts/: verify_release.sh
src/: README.md
src/python_refactor_mcp/: README.md  __init__.py  __main__.py  lsp_client.py  mcp_server.py  workspace_edit.py
tests/: README.md  test_integration.py
tests/example_project/: README.md  __init__.py  main.py  utils.py
tests/src/: README.md
tests/src/python_refactor_mcp/: README.md  test___main__.py  test_lsp_client.py  test_mcp_server.py  test_workspace_edit.py
