[project]
name = "python-refactor-mcp"
version = "1.0.0"
description = "MCP-LSP Bridge: A semantically-aware MCP server for safe Python refactoring using Pyright"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Python Refactor MCP Contributors" }
]
keywords = ["mcp", "lsp", "pyright", "refactoring", "python", "language-server", "ai", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "mcp>=1.0.0",
    "pyright>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/Jonathangadeaharder/python-refactor-mcp"
Repository = "https://github.com/Jonathangadeaharder/python-refactor-mcp"
Issues = "https://github.com/Jonathangadeaharder/python-refactor-mcp/issues"
Documentation = "https://github.com/Jonathangadeaharder/python-refactor-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_refactor_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
